<resources>
    <string name="app_name">MapsUpeuRest</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="action_button">Log In</string>
    <string name="button_reg_asisten">Assistance Register</string>
    <string name="ic_register_asis">Assistance Register</string>
    <string name="ic_list_event">Show Events</string>
    <string name="ic_list_asis">Show Assistance</string>
    <string name="ic_list_event_map">Show Events in Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
